objects/tfn_Deed_Restriction__c.object
<CustomObject>
    <fields>
        <fullName>Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipName>Deed_Restrictions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restriction_Type__c</fullName>
        <label>Allowance Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dogs</fullName>
                </value>
                <value>
                    <fullName>Dwellings</fullName>
                </value>
                <value>
                    <fullName>Existing Dams</fullName>
                </value>
                <value>
                    <fullName>Fallen Timber</fullName>
                </value>
                <value>
                    <fullName>Fertiliser</fullName>
                </value>
                <value>
                    <fullName>Further dam</fullName>
                </value>
                <value>
                    <fullName>Livestock</fullName>
                </value>
                <value>
                    <fullName>Ecotourism</fullName>
                    <isActive>false</isActive>
                    <label>Ecotourism</label>
                </value>
                <value>
                    <fullName>Extra Dams</fullName>
                    <isActive>false</isActive>
                    <label>Extra Dams</label>
                </value>
                <value>
                    <fullName>Home Occupation</fullName>
                    <isActive>false</isActive>
                    <label>Home Occupation</label>
                </value>
                <value>
                    <fullName>Other Items</fullName>
                    <isActive>false</isActive>
                    <label>Other Items</label>
                </value>
                <value>
                    <fullName>Public Access</fullName>
                    <isActive>false</isActive>
                    <label>Public Access</label>
                </value>
                <value>
                    <fullName>REASON</fullName>
                    <isActive>false</isActive>
                    <label>REASON</label>
                </value>
                <value>
                    <fullName>Signage</fullName>
                    <isActive>false</isActive>
                    <label>Signage</label>
                </value>
                <value>
                    <fullName>Structures</fullName>
                    <isActive>false</isActive>
                    <label>Structures</label>
                </value>
                <value>
                    <fullName>Subdivision</fullName>
                    <isActive>false</isActive>
                    <label>Subdivision</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tfn_Tier_Global</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Deed_Comments__c</fullName>
        <label>Deed Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Deed_Restriction_ID__c</fullName>
        <displayFormat>DA{0000}</displayFormat>
        <label>Deed Allowance ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>tfn_Restriction_Description__c</fullName>
        <label>Allowance Default Text</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Restriction_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No default text</fullName>
                </value>
                <value>
                    <fullName>Two working dogs to assist with management of livestock</fullName>
                </value>
                <value>
                    <fullName>One Dwelling</fullName>
                </value>
                <value>
                    <fullName>Two Dwellings</fullName>
                </value>
                <value>
                    <fullName>Other than one existing at the date of this Covenant</fullName>
                </value>
                <value>
                    <fullName>Other than two existing at the date of this Covenant</fullName>
                </value>
                <value>
                    <fullName>Other than three existing at the date of this Covenant</fullName>
                </value>
                <value>
                    <fullName>Save for the removal of fallen timber for the Owner&apos;s non-commercial use consistent wih the Covenant Objectives and pursuant to the Covenant Management Plan;</fullName>
                </value>
                <value>
                    <fullName>The application of fertilizer</fullName>
                </value>
                <value>
                    <fullName>And one further dam to be located within</fullName>
                </value>
                <value>
                    <fullName>And two further dams to be located within</fullName>
                </value>
                <value>
                    <fullName>Save for livestock entering for the purpose of grazing consistent with the Covenant Objectives and pursuant to the Covenant Management Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Volume_Folio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume/Folio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>tfn_Parcel__c.Interest__c</field>
                <operation>equals</operation>
                <valueField>$Source.Interest__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tfn_Parcel__c</referenceTo>
        <relationshipName>Deed_Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deed Allowance</label>
    <nameField>
        <label>Deed Allowance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deed Allowances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>